objects/ProductConsumed.object
<CustomObject>
    <fields>
        <fullName>asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>av_delay_pace__c</fullName>
        <description>Programming parameter field for Device, example value is 150</description>
        <label>AV Delay Pace</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>brady_channel__c</fullName>
        <description>Values sent to HMSC</description>
        <label>Brady Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>RA+RV</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>charge_time__c</fullName>
        <description>Programming parameter field for ICD, default value is 0.0</description>
        <label>Charge Time</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cm_active__c</fullName>
        <description>Checkbox on Device record, if CM was activated.</description>
        <formula>ProductItem.cm_active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checkbox on Device record, if CM was activated.</inlineHelpText>
        <label>CM active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>defib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defib</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dft__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.0</description>
        <label>DFT</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>expiration_date_ubd__c</fullName>
        <description>Date after which product expires and must not be used</description>
        <formula>ProductItem.expiration_date_ubd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date after which product expires and must not be used</inlineHelpText>
        <label>Expiration date (UBD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expired_ubd_acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user has to acknowledge that he knows, that the UBD is in the past the moment he edits/created the record</description>
        <label>Expired UBD acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>impedance__c</fullName>
        <label>Impedance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>implant_date__c</fullName>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_movement_date__c</fullName>
        <description>Last day the product has been moved to the account location.</description>
        <formula>ProductItem.last_movement_date__c</formula>
        <label>Last Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lead_tip_location__c</fullName>
        <label>Lead Tip Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RV_APEX</fullName>
                    <label>RV, Apex</label>
                </value>
                <value>
                    <fullName>RV_SEPTUM</fullName>
                    <label>RV, Septum</label>
                </value>
                <value>
                    <fullName>RV_HIS</fullName>
                    <label>RV, HISbundle</label>
                </value>
                <value>
                    <fullName>RV_OT</fullName>
                    <label>RV, OutflowTract</label>
                </value>
                <value>
                    <fullName>RV_ANT</fullName>
                    <label>RV, Anterior</label>
                </value>
                <value>
                    <fullName>RV_LAT</fullName>
                    <label>RV, Lateral</label>
                </value>
                <value>
                    <fullName>RV_EPICARD</fullName>
                    <label>RV, Epicardial</label>
                </value>
                <value>
                    <fullName>RV_ANY</fullName>
                    <label>RV / No details</label>
                </value>
                <value>
                    <fullName>RA_ANT</fullName>
                    <label>RA, Anterior</label>
                </value>
                <value>
                    <fullName>RA_FWALL</fullName>
                    <label>RA, FreeWall</label>
                </value>
                <value>
                    <fullName>RA_SEPTUM</fullName>
                    <label>RA, Septum</label>
                </value>
                <value>
                    <fullName>RA_ANY</fullName>
                    <label>RA / No details</label>
                </value>
                <value>
                    <fullName>RA_HIS</fullName>
                    <label>RA, HISbundle</label>
                </value>
                <value>
                    <fullName>LV_APEX</fullName>
                    <label>LV, Apex</label>
                </value>
                <value>
                    <fullName>LV_LAT</fullName>
                    <label>LV, Lateral</label>
                </value>
                <value>
                    <fullName>LV_POST</fullName>
                    <label>LV, Posterior</label>
                </value>
                <value>
                    <fullName>LV_SEPTUM</fullName>
                    <label>LV, Septum</label>
                </value>
                <value>
                    <fullName>LV_EPICARD</fullName>
                    <label>LV, Epicardial</label>
                </value>
                <value>
                    <fullName>LV_ANY</fullName>
                    <label>LV / No details</label>
                </value>
                <value>
                    <fullName>CS_POST</fullName>
                    <label>Coronary Sinus, Posterior</label>
                </value>
                <value>
                    <fullName>CS_POST_LAT</fullName>
                    <label>Coronary Sinus, Posterior, Lateral</label>
                </value>
                <value>
                    <fullName>CS_LAT</fullName>
                    <label>Coronary Sinus, Lateral</label>
                </value>
                <value>
                    <fullName>CS_ANT</fullName>
                    <label>Coronary Sinus, Anterior</label>
                </value>
                <value>
                    <fullName>CS_ANT_LAT</fullName>
                    <label>Coronary Sinus, Anterior, Lateral</label>
                </value>
                <value>
                    <fullName>CS_ANY</fullName>
                    <label>Coronary Sinus / No details</label>
                </value>
                <value>
                    <fullName>CV_GREAT</fullName>
                    <label>Cardiac Vein, Great</label>
                </value>
                <value>
                    <fullName>CV_MID</fullName>
                    <label>Cardiac Vein, Middle</label>
                </value>
                <value>
                    <fullName>CV_POST</fullName>
                    <label>Cardiac Vein, Posterior</label>
                </value>
                <value>
                    <fullName>CV_POST_LAT</fullName>
                    <label>Cardiac Vein, Posterior, Lateral</label>
                </value>
                <value>
                    <fullName>CV_LAT</fullName>
                    <label>Cardiac Vein, Lateral</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lower_rate__c</fullName>
        <description>Programming parameter field for Device, example value is 70</description>
        <label>Lower Rate</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>manufacturer__c</fullName>
        <description>When the user adds a competitor product to a patient they must select the Manufacturer from this picklist.</description>
        <formula>TEXT(ProductItem.manufacturer__c)</formula>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DDD</fullName>
                </value>
                <value>
                    <fullName>DDD/CLS</fullName>
                </value>
                <value>
                    <fullName>DDDR</fullName>
                </value>
                <value>
                    <fullName>DDI</fullName>
                </value>
                <value>
                    <fullName>DDIR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
                <value>
                    <fullName>VDD</fullName>
                </value>
                <value>
                    <fullName>VVI</fullName>
                </value>
                <value>
                    <fullName>VVI/CLS</fullName>
                </value>
                <value>
                    <fullName>VVIR</fullName>
                </value>
                <value>
                    <fullName>AAIR</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
                <value>
                    <fullName>AAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mode_switch__c</fullName>
        <label>Mode Switch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model_no__c</fullName>
        <formula>ProductItem.model_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oos_additional_information__c</fullName>
        <description>Reason device or lead was taken out of service (comment)</description>
        <label>OOS - Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oos_date__c</fullName>
        <description>Date device was taken out of service (explanted, capped, or discarded).</description>
        <label>OOS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>oos_reason__c</fullName>
        <label>OOS Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tdb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>other_comments__c</fullName>
        <label>Other Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>p_amp__c</fullName>
        <label>P AMP</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pace_sense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pace/Sense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the patient record</description>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>notEqual</operation>
                <value>Deceased</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products Consumed (Patient)</relationshipLabel>
        <relationshipName>Products_Consumed1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pid__c</fullName>
        <description>Product identifier assigned by BIOTRONIK for use with Home Monitoring Service Center registrations.</description>
        <formula>ProductItem.pid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product identifier assigned by BIOTRONIK for use with Home Monitoring Service Center registrations.</inlineHelpText>
        <label>PID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pid_ui__c</fullName>
        <label>PID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>polarity__c</fullName>
        <label>Polarity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_atrium__c</fullName>
        <label>Polarity Pacing Atrium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_lv__c</fullName>
        <label>Polarity Pacing LV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_rv__c</fullName>
        <label>Polarity Pacing RV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_atrium__c</fullName>
        <label>Polarity Sensing Atrium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_lv__c</fullName>
        <label>Polarity Sensing LV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_rv__c</fullName>
        <label>Polarity Sensing RV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>product2_id__c</fullName>
        <description>Product Name</description>
        <formula>ProductItem.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_code__c</fullName>
        <description>Unique numeric identifier of the product</description>
        <formula>ProductItem.product_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <description>Product type defined by the picklist located in the related Product Item record.</description>
        <formula>TEXT(ProductItem.product_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v__c</fullName>
        <label>Pulse Amplitude (V) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v_lv__c</fullName>
        <label>Pulse Amplitude (V) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v_rv__c</fullName>
        <label>Pulse Amplitude (V) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width__c</fullName>
        <label>Pulse Width</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width_ms_atrium__c</fullName>
        <label>Pulse Width (ms) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width_ms_lv__c</fullName>
        <label>Pulse Width (ms) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width_ms_rv__c</fullName>
        <label>Pulse Width (ms) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quantity_unit_of_measure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quantity_unit_of_measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>r_amp__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.00</description>
        <label>R AMP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>replenish__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Replenish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sap_account_no__c</fullName>
        <description>Is the company code.</description>
        <formula>TEXT(ProductItem.sap_company_code__c)</formula>
        <label>SAP Account No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_price__c</fullName>
        <description>Loaded price at time of order</description>
        <formula>ProductItem.sap_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Loaded price at time of order</inlineHelpText>
        <label>SAP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sap_stock_location__c</fullName>
        <description>A number code which identifies the location.</description>
        <formula>ProductItem.LocationId</formula>
        <label>SAP Stock Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sensitivity_a__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.40</description>
        <label>Sensitivity - A</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_atrium__c</fullName>
        <label>Sensitivity (mV) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_lv__c</fullName>
        <label>Sensitivity (mV) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_rv__c</fullName>
        <label>Sensitivity (mV) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_v__c</fullName>
        <description>Programming parameter field for Lead, example value is 2.50</description>
        <label>Sensitivity - V</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serial_number__c</fullName>
        <formula>ProductItem.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shock_impedance__c</fullName>
        <description>Programming parameter field for ICD, default value is 0</description>
        <label>Shock Impedance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slew_rate__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.00</description>
        <label>Slew Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>The status of the device.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implanted</fullName>
                </value>
                <value>
                    <fullName>Explanted</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Partially Capped</fullName>
                </value>
                <value>
                    <fullName>Patient Deceased</fullName>
                </value>
                <value>
                    <fullName>Not Implantable Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stock_type__c</fullName>
        <description>Stock Type (Cons, Bulk, Trunk)</description>
        <formula>CASE(ProductItem.stocktype__c, &quot;T&quot;, &quot;Trunk Stock&quot;,&quot;B&quot;, &quot;Bulk&quot;, &quot;L&quot;, &quot;Loaned Stock&quot;,&quot;C&quot;, &quot;Consignment Stock&quot;, NULL)</formula>
        <label>Stock Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tachy_channel__c</fullName>
        <label>Tachy Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>RV+SVC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>threshold__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.60</description>
        <label>Threshold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ubd_expired__c</fullName>
        <description>Shows that the asset is expired. It is not recommended to consume the device if this field shows &quot;true&quot;.</description>
        <formula>expiration_date_ubd__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UBD expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>udi__c</fullName>
        <description>Unique Device Identification made up of serial/batch number, UBD, and EAN. Required by FDA.</description>
        <formula>ProductItem.udi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UDI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>upper_rate__c</fullName>
        <description>Programming parameter field for Device, example value is 110</description>
        <label>Upper Rate</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>biotronik_product</fullName>
        <active>true</active>
        <label>BIOTRONIK Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ExpiredUbdHasToBeAcknowledged</fullName>
        <active>true</active>
        <description>If the expiration date is over due, the user hast to check the checkbox &apos;expired_ubd_acknowledged__c&apos; to acknowledge that he knows that the used by date is expired.</description>
        <errorConditionFormula>(expiration_date_ubd__c &lt; TODAY()) &amp;&amp; !expired_ubd_acknowledged__c</errorConditionFormula>
        <errorDisplayField>expired_ubd_acknowledged__c</errorDisplayField>
        <errorMessage>The use-by date is expired!</errorMessage>
    </validationRules>
</CustomObject>